[tool.poetry]
name = "qre"
version = "22.09.2"
description = "Like re, but cuter."
authors = ["Mikael Honkala <mikael.honkala@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikaelho/qre"
keywords = ["string", "pattern", "matching", "regular", "expression", "regex"]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
