[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qre"
description = "Like re, but cuter."
authors = [{name = "Mikael Honkala", email = "mikael.honkala@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = ["string", "pattern", "matching", "regular", "expression", "regex"]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Home = "https://github.com/mikaelho/qre"
